feat: create auth using jwt
