# api/openapi/loans.yml
@@ -86,6 +86,7 @@ components:
       required:
         - uuid
         - borrowerUuid
+        - officerUuid
         - amountIdr
         - termMonths
         - loanType
@@ -96,6 +97,9 @@ components:
           type: string
           format: uuid
         borrowerUuid:
+          type: string
+          format: uuid
+        officerUuid:
           type: string
           format: uuid
         amountIdr:
